# learn

./: CMakeLists.txt  CaptureScreen.cpp  CaptureScreen.h  Pretreat.cpp  Pretreat.h  camlib.cpp  camlib.h  camlib.ui  dataPlot.cpp  dataPlot.h  dataPlot.ui  dataprocess.cpp  dataprocess.h  imageshow.cpp  imageshow.h  main.cpp  mousechoose.cpp  mousechoose.h  testdrawwidget.cpp  testdrawwidget.h  testprocess.cpp  testprocess.h  ui_camlib.h  ui_dataPlot.h
